spacing and bugs

--- a/style.css
+++ b/style.css
@@ -234,13 +234,22 @@ button:hover {
   color: #efeddf;
 }
 
+h2 {
+  font-family: "Libre italic", serif;
+  font-size: 24px;
+  font-weight: 900;
+  color: #111111;
+  margin: 0;
+  padding: 12px 0px;
+}
+
 h3 {
   font-family: "Manrope", sans-serif;
   font-size: 16px;
   font-weight: 400;
   color: #111111;
   margin: 0;
-  padding: 12px 0px;
+  padding: 8px 0px;
 }
 
 h4 {
